# skillmill

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  flake.nix  package.nix
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/skillmill-cli/: Cargo.toml
crates/skillmill-cli/src/: main.rs
crates/skillmill-cli/src/commands/: generate.rs  list.rs  mod.rs  preview.rs  registry.rs  validate.rs
crates/skillmill-cli/src/commands/init/: policy.rs  profile.rs
crates/skillmill-cli/src/ui/: mod.rs  prompt.rs  tree.rs
crates/skillmill-cli/tests/: cli_bdd.rs
crates/skillmill-cli/tests/features/: cli.feature
crates/skillmill-core/: Cargo.toml
crates/skillmill-core/benches/: render_bench.rs
crates/skillmill-core/src/: compose.rs  curriculum.rs  lib.rs  plugin.rs  policy.rs  profile.rs  render.rs  schema.rs
docs/specs/: brief.md  design.md  roadmap.md
examples/run-01/policies/: p2-fractions-identify-shaded.yaml
plugins/skillmill-math/: Cargo.toml
plugins/skillmill-math/curricula/: p1-p3.yaml
plugins/skillmill-math/src/: lib.rs
plugins/skillmill-math/tests/: render_snapshot.rs  validation.rs
plugins/skillmill-math/tests/snapshots/: render_snapshot__worksheet_json.snap
templates/base/: answer-key.typ  worksheet.typ
templates/disciplines/math/: answer-key.typ  worksheet.typ
templates/disciplines/math/commoncore-portrait/: answer-key.typ  worksheet.typ
templates/disciplines/math/landscape-drill/: answer-key.typ  worksheet.typ
