[workspace]
members = [
  "crates/skillmill-core",
  "crates/skillmill-cli",
  "plugins/skillmill-math",
]
resolver = "2"

[workspace.package]
edition     = "2024"
license     = "MIT"
repository  = "https://github.com/jonochang/skillmill"

[workspace.dependencies]
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde_yaml      = "0.9"
thiserror       = "2"
rand            = "0.9"
indexmap        = { version = "2", features = ["serde"] }
schemars        = "0.8"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio           = { version = "1", features = ["rt-multi-thread", "macros"] }
# Testing
insta           = { version = "1", features = ["yaml"] }
proptest        = "1"
criterion       = "0.5"
tempfile        = "3"
sha2            = "0.10"
which           = "6"
pathdiff        = "0.2"
chrono          = { version = "0.4", features = ["clock", "std"] }
cucumber        = "0.20"

[profile.release]
codegen-units = 1
lto = true
