[package]
name = "skillmill"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
console = "0.15"
dialoguer = "0.11"
serde_yaml.workspace = true
skillmill-core = { path = "../skillmill-core" }
skillmill-math = { path = "../../plugins/skillmill-math" }
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
