[package]
name = "skillmill"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
console = "0.15"
dialoguer = "0.11"
serde_yaml.workspace = true
skillmill-core = { path = "../skillmill-core" }
skillmill-math = { path = "../../plugins/skillmill-math" }
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"
cucumber = { workspace = true, features = ["macros"] }
futures = "0.3"
predicates = "3"
tempfile = "3"
tokio.workspace = true

[[test]]
name = "cli_bdd"
harness = false
