[package]
name = "skillmill-core"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
rand.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
pathdiff.workspace = true
chrono.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true
sha2.workspace = true
which.workspace = true
skillmill-math = { path = "../../plugins/skillmill-math" }

[[bench]]
name = "render_bench"
harness = false
